tests/ui/fmt-for-loop.stderr
error[E0382]: use of moved value: `f`
 --> $DIR/fmt-for-loop.rs:6:24
  |
4 |     fn format(&self, f: defmt::Formatter) {
  |                      - move occurs because `f` has type `defmt::Formatter<'_>`, which does not implement the `Copy` trait
5 |         for _ in 0..3 {
6 |             0u8.format(f);
  |                        ^ value moved here, in previous iteration of loop
